Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

* Fri Feb 22 2008 - 0.8.3
- Make createrepo get run for local cobbler reposync invocations as needed
- fix WebUI documentation URL
- fix bug in /etc/cobbler/modules.conf regarding pluggable authn/z
- fix default flags for yumdownloader

* Fri Feb 22 2008 - 0.8.2
- fix to webui to allow repos to be edited there on profile page
- disable local socket XMLRPC as nothing is using it.
- fixed findks.cgi so it supports multiple NICs
- import now supports both --path and --mirror as aliases, as before
- added change_profile.cgi for changing profiles from CGI
- added register_mac.cgi

* Wed Feb 20 2008 - 0.8.1
- bugfix in reposync code
- don't print tracebacks on SystemExit from optparse
- manpage tweaks

* Fri Feb 15 2008 - 0.8.0 (TBD)
- stable release of 0.7.* branch plus ...
- fixed potential user problem with source_repos in upgrade scenario
- additional higher level API functions for find, fixes for other higher level API functions
- better messaging when insufficient permissions on needed files
- update permissions on reposync fixes

* Thu Jan 31 2008 - 0.7.2 (0.8 rc)
- default_virt_file_size and default_virt_ram added to settings
- enforce permissions/selinux context after reposync
- better API for copying/renames, API consistancy cleanup
- support for renames that resolve dependencies, inclusion in CLI+webapp
- remove leading newline in rendered template files, which apparently breaks AutoYAST?
- recursive syncs automatically sync all subobjects when editing parent objects (default behavior)
- deletes can now be done recursively (optional --recursive on distro/profile remove)
- 'cobbler list' is now (re)sorted

* Wed Jan 09 2008 - 0.7.1
- allow imports to force usage of a specific kickstart template with --kickstart
- added --yumopts parameter to repos (works just like --kopts/--ksmeta)
- minor doc fixes
- fix for name of F8 comps.xml file
- added option --rsync-flags to import command