@@ -15,6 +15,7 @@ Patches and other contributions from:
     Mihai Ibanescu <mihai.ibanescu@gmail.com>
     Adrian Likins <alikins@redhat.com>
     David Lutterkort <dlutter@redhat.com>
+    Lester M. <needwork@gmail.com>
     Jim Meyering <jim@meyering.net>
     Perry Myers <pmyers@redhat.com>
     Jack Neely <jjneely@ncsu.edu>
